--- a/inform_mapper/static/scss/_graph.scss
+++ b/inform_mapper/static/scss/_graph.scss
@@ -5,9 +5,9 @@ $info-box-width: 25%;
 
 /* Main page elements */
 #info-box {
-    @media (max-width: 400px) {
+    @media (max-width: 750px) {
         width: 100%;
-        left: -400px;
+        left: -750px;
     }
 
     height: 90%;
@@ -22,7 +22,7 @@ $info-box-width: 25%;
 
 /* Graph container */
 #cy {
-    @media (max-width: 400px) {
+    @media (max-width: 750px) {
         width: 100%;
         left: 0;
     }
@@ -35,7 +35,7 @@ $info-box-width: 25%;
 }
 
 #menu {
-    @media (min-width: 400px) {
+    @media (min-width: 750px) {
         display: none;
     }
 
@@ -47,7 +47,7 @@ $info-box-width: 25%;
 
 /* Help text */
 .help-text {
-    @media (max-width: 400px) {
+    @media (max-width: 750px) {
         display: none;
     }
     color: $background-contrast;
@@ -59,7 +59,7 @@ $info-box-width: 25%;
 
 /* Search box */
 .search-box-container {
-    @media (max-width: 400px) {
+    @media (max-width: 750px) {
         width: 100%;
     }
 
@@ -76,7 +76,7 @@ $info-box-width: 25%;
     }
 
     & .search-icon {
-        @media (max-width: 400px) {
+        @media (max-width: 750px) {
             left: 10%;
         }
 
@@ -87,7 +87,7 @@ $info-box-width: 25%;
     }
 
     & .clear-icon {
-        @media (max-width: 400px) {
+        @media (max-width: 750px) {
             right: 10%;
         }
 
